[project]
name = "ndp"
version = "0.1.0"
description = "Normalize multiple food composition databases into a shared JSONL schema."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pyarrow>=23.0.0",
]

[project.scripts]
ndp = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "nutrient_mapping"]

[tool.setuptools.packages.find]
include = ["common*", "parsers*"]
exclude = ["data*", "tests*"]
